// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App renders info, filters, sorting options and list of launches 1`] = `
<main
  className="main"
>
  <WithStyles(CssBaseline) />
  <WithStyles(Grid)
    container={true}
    spacing={16}
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <React.Memo
        launches={
          Array [
            Object {
              "details": "Details",
              "flightNumber": 1,
              "isFailed": false,
              "isSuccessful": true,
              "isTentative": false,
              "isUpcoming": false,
              "missionName": "Test",
              "utcDate": Object {
                "toLocaleString": [MockFunction],
              },
            },
          ]
        }
      />
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <React.Memo
        onChange={[Function]}
        showFailed={true}
        showSuccessful={true}
        showUpcoming={false}
      />
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <React.Memo
        onSortChange={[Function]}
        sortField="launch_date_utc"
        sortOrder="desc"
      />
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <React.Memo
        launches={
          Array [
            Object {
              "details": "Details",
              "flightNumber": 1,
              "isFailed": false,
              "isSuccessful": true,
              "isTentative": false,
              "isUpcoming": false,
              "missionName": "Test",
              "utcDate": Object {
                "toLocaleString": [MockFunction],
              },
            },
          ]
        }
      />
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</main>
`;

exports[`App when is loading launches renders a loader 1`] = `
<main
  className="main"
>
  <WithStyles(CssBaseline) />
  <WithStyles(Component) />
</main>
`;

exports[`App when is not loading launches when is updating launches renders info, filters, sorting options, and a loader 1`] = `
<main
  className="main"
>
  <WithStyles(CssBaseline) />
  <WithStyles(Grid)
    container={true}
    spacing={16}
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <React.Memo
        launches={
          Array [
            Object {
              "details": "Details",
              "flightNumber": 1,
              "isFailed": false,
              "isSuccessful": true,
              "isTentative": false,
              "isUpcoming": false,
              "missionName": "Test",
              "utcDate": Object {
                "toLocaleString": [MockFunction],
              },
            },
          ]
        }
      />
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <React.Memo
        onChange={[Function]}
        showFailed={true}
        showSuccessful={true}
        showUpcoming={false}
      />
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <React.Memo
        onSortChange={[Function]}
        sortField="launch_date_utc"
        sortOrder="desc"
      />
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <div
        className="updatingLoader"
      >
        <WithStyles(Component) />
      </div>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</main>
`;
